# ft_printf

./: CMakeLists.txt  Makefile  a.out  ft_check.c  ft_check_color.c  ft_check_other.c  ft_notype.c  ft_printf.c  ft_printf.h  ft_write_char.c  main.c  print_c.c  print_f.c  print_id.c  print_idp2.c  print_mid.c  print_n.c  print_o.c  print_p.c  print_percent.c  print_s.c  print_sp2.c  print_ss.c  print_u.c  print_un.c  print_x.c
ft_itoa/: ft_itoa.h  ft_itoa_base.c  ft_itoa_base_low.c  ft_itoa_base_un.c  ft_itoa_intmax_t.c  ft_itoa_intmax_t_low.c  ft_itoa_long.c  ft_itoa_long_lg.c  ft_itoa_long_lg_low.c  ft_itoa_long_lg_un.c  ft_itoa_long_low.c  ft_itoa_long_un.c  ft_itoa_short.c  ft_itoa_short_low.c  ft_itoa_short_un.c  ft_itoa_size_t.c  ft_itoa_size_t_low.c  ft_itoa_uintmax_t.c
libft/: ft_atoi.c  ft_bzero.c  ft_numberlen.c  ft_pow.c  ft_putchar.c  ft_putstr.c  ft_strcmp.c  ft_strlen.c  libft.h
